# proctor

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20230127191015_init.up.sql
src/: db.rs  docs.rs  lib.rs  main.rs  trace.rs
src/common/: errors.rs
src/user/: errors.rs  handlers.rs  mod.rs  models.rs  repository.rs  requests.rs  responses.rs  routes.rs  service.rs
