[package]
name = "proctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "modules"
path = "src/lib.rs"

[[bin]]
name = "proctor"
path = "src/main.rs"

[dependencies]
axum = "0.6.3"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
fancy-regex = "0.11.0"
hyper = { version = "0.14.23", features = ["full"] }
jsonwebtoken = "8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = [
  "chrono",
  "runtime-tokio-native-tls",
  "migrate",
  "macros",
  "postgres",
  "uuid",
] }
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
  "json",
  "env-filter",
  "std",
] }
utoipa = { versino = "2.4.2", features = [
  "axum_extras",
  "json",
  "openapi_extensions",
  "uuid",
] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
